--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -28,7 +28,7 @@ hr{
 button{
   margin: 20px;
   padding: 20px;
-  background: linear-gradient(180deg, #30bebf 0%, #1f9292 100%);
+  background: linear-gradient(180deg, #bdd821 0%, #af11af 100%);
   border-radius: 12px;
   color: white;
   font-weight: 600;
@@ -37,7 +37,7 @@ button{
 
 .dadosDeConta{
   h2{
-    color: #1f9292;
+    color: #af11af;
     margin: 0;
     margin-bottom: 8px;
   }
